# gababot

./: .gitignore  README.md
hello_world_arduino/: hello_world_arduino.ino
hello_world_arduino/arduino_speed_control/: arduino_speed_control.ino
hello_world_arduino/hello_world_encoder/: hello_world_encoder.ino
hello_world_arduino/motor_hello_world/: motor_hello_world.ino
include/: encoder.h  motor.h
jake/: CMakeLists.txt  package.xml
jsPlayground/: .hello_world.html.swp  hello_world.html  key.txt  keyboard.txt  turtle_teleop.html
launch/: camera.launch  controller.launch  distributed.launch  gababot.launch  serial.launch  teleop.launch
source/arduinoLibrary/: motor.h  motors.cpp
source/arduino_main/: Encoder.cpp  Encoder.h  Motor.cpp  MotorControl.cpp  MotorControl.h  SerialCommunication.cpp  arduino_main.ino
source/main/: Motor.cpp  MotorControl.cpp  MotorControl.h  SerialCommunication.cpp  SerialCommunication.h  encoder.cpp  encoder.h  initio.h  main.ino  motor.h  motors.cpp
source/pythonRemote/: basicRemote.py
src/arduino_main/: initio.h
src/gababot_core/: CMakeLists.txt  package.xml
src/gababot_core/arduino_firmware/: CMakeLists.txt  Encoder.cpp  Encoder.h  Motor.cpp  Motor.h  MotorControl.cpp  MotorControl.h  MovingBase.cpp  MovingBase.h  arduino_main.cpp  initio.h
src/jake/: CMakeLists.txt  Key.js  Keyboard.js  TwistKeyboardCallback.cpp  TwistKeyboardCallback.h  jsKeyboard.html  key_twist.cpp  package.xml
src/jake/launch/: jake.launch
src/jake/msg/: Key.msg  Keyboard.msg
src/web_interface/: Key.js  Keyboard.js  SLAM_position.js  capture_keypresses.js  images  index.css  index.html  setup_ROS.js  webcam_image_callback.js
