<?xml version="1.0"?>
<package>
  <name>gababot_core</name>
  <version>0.0.1</version>
  <description>The core package for gababot. It provides topics for sensor 
	  readings, an interface to control the robot as well as the firmware 
	  for the arduino</description>

  <maintainer email="sebastian@wallkoetter.net">Sebastian Wallkoetter</maintainer>
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/gababot_core</url> -->

  <author email="sebastian@wallkoetter.net">Sebastian Wallkoetter</author>

  <!--   <build_depend>message_generation</build_depend> -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosserial_arduino</build_depend>
  <build_depend>rosserial_client</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>rosserial_arduino</run_depend>
  <run_depend>rosserial_client</run_depend>
  <run_depend>geometry_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
