<?xml version="1.0"?>
<package>
  <name>jake</name>
  <version>0.0.1</version>
  <description>JAKE - Just Another Keyboard Eventhandler. A package </description>

  <maintainer email="sebastian@wallkoetter.net">Sebastian Wallkoetter</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/jake</url> -->

  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
  <author email="sebastian@wallkoetter.net">Firefox Metzger</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>

  </export>
</package>
